# AI-Workspace

./: .gitignore  .vercelignore  AGENTS.md  README.md  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt  package-lock.json  package.json  projects.md
.github/: pull_request_template.md
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
agents/: bug-error.md  builder.md  market-feature.md  reviewer.md  spec-conversation.md  spec-drift.md
application-agent/: .gitignore  AGENTS.md  README.md  pyproject.toml
application-agent/.github/: pull_request_template.md
application-agent/openspec/: project.md
application-agent/openspec/specs/generation/: spec.md
application-agent/openspec/specs/integrations/: spec.md
application-agent/openspec/specs/orchestrator/: spec.md
application-agent/openspec/specs/tracker/: spec.md
application-agent/src/application_agent/: __init__.py  cli.py  models.py
application-agent/src/application_agent/generation/: __init__.py  fill_plan.py
application-agent/src/application_agent/integrations/: __init__.py
application-agent/src/application_agent/integrations/slack/: __init__.py  app.py  formatting.py  service.py
application-agent/src/application_agent/orchestrator/: __init__.py  pipeline.py
application-agent/src/application_agent/tracker/: __init__.py  store.py
application-agent/tests/: test_capture.py
design/: README.md  resources.md  workflow.md
handovers/: linear-sha-25-resume-handoff.md  (+2 more)
(+230 files in other folders)
