[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "application-agent"
version = "0.1.0"
description = "Human-in-the-loop career co-pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "slack-bolt>=1.21.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
application-agent = "application_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
